# python-xiaomi-miwifi

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: index.md
src/xiaomi_miwifi/: __init__.py  client.py  const.py  exceptions.py  models.py  routers.py
tests/: conftest.py  test_client.py  test_models.py  test_routers.py
